# circly

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  get_assets.sh  justfile  protocol.txt
.github/: dependabot.yml
.github/workflows/: rust.yml
camphor/: Cargo.toml
camphor-tokio/: Cargo.toml  README.md
camphor-tokio/src/: lib.rs
camphor/src/: lib.rs
laurel-client/: Cargo.toml  build.rs
laurel-client-py/: README.md  main.py
laurel-client/src/: main.rs
laurel-common/: Cargo.toml  README.md
laurel-common/src/: camphor.rs  client.rs  lib.rs  lore.rs
laurel-server/: Cargo.toml
laurel-server/src/: main.rs
lore-proto/: Cargo.toml  lore.txt
lore-proto/src/: lib.rs
protos/: protogen.py  service.proto
schemas/: all.capnp
src/: camphor.rs  components.rs  lib.rs  types.rs
