[workspace]
members = ["laurel-client", "laurel-common", "laurel-server"]
resolver = "3"

[workspace.package]
authors = ["Fae"]
description = "A rougelike based on a server client model implemented in rust."
repository = "https://github.com/MadenedDM/laurel"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["Game"]
categories = ["games"]
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid" # Might change later

[workspace.lints.clippy]
absolute_paths = "warn"
allow_attributes = "warn"
# arbitrary_source_item_ordering = "warn"
arithmetic_side_effects = "warn"
big_endian_bytes = "warn"
cfg_not_test = "deny"
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[profile.release]
strip = "debuginfo"
lto = "thin"

[profile.dev]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Provides an ECS toolset
hecs = { version = "0.10", features = ["macros", "serde"] }

# Provides Serialization
serde = { version = "1.0.219", features = ["derive"] }

# Provides error handling
thiserror = { version = "2.0.12" }

# Provides tools for parsing
# nom = { version = "8.0" }

# Provides async
tokio = { version = "1.47", features = ["full"] }

# uuid = { version = "1.17", features = ["v4"] }
