[package]
name = "circly"
authors = ["Fae"]
description = "A rougelike based on a server client model implemented in rust."
repository = "https://github.com/MadenedDM/circly"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["Game"]
categories = ["games"]
readme = "README.md"

[[bin]]
name = "client"
required-features = ["graphical"]

[[bin]]
name = "server"

[lib]
name = "common"

[profile.release]
strip = "debuginfo"
lto = "thin"

[profile.dev]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
graphical = ["dep:bracket-terminal"]

[dependencies]
# Provides an ECS toolset
hecs = { version = "0.10", features = ["macros"] }

# Provides Serialization features
rkyv = { version = "0.8", features = [] }

# Provides error handling
thiserror = { version = "2.0" }

# Logging utils
log = { version = "0.4" }
simplelog = { version = "0.12" }

# Provides tools for parsing
nom = { version = "8.0" }

# Provides RNG
rand_pcg = "0.9.0"

# Provides async & networking
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1.17"
prost = "0.14"
tonic = "0.14"

# Provides a terminal for rendering
bracket-terminal = { version = "0.8.7", optional = true }

uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
tonic-build = "0.14"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
absolute_paths = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
big_endian_bytes = "warn"
cfg_not_test = "deny"
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
