[package]
name = "laurel-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
uuid.workspace = true
hecs.workspace = true
bracket-terminal = "0.8.7"
