[package]
name = "laurel-common"
authors.workspace = true
description.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
