[package]
name = "laurel-common"
authors.workspace = true
description.workspace = true
repository.workspace = true
# My most sincere apologies for the versioning scheme for this
version = "1.0.0-ALEPH" 
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rkyv = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio"]
