[package]
name = "laurel-common"
authors.workspace = true
description.workspace = true
repository.workspace = true
version = "0.1.0" 
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
rkyv = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio"]
