[package]
name = "laurel-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
uuid.workspace = true
hecs.workspace = true
# tokio.workspace = true
rand_pcg = "0.9.0"
# nom.workspace = true
# lore-proto = { path = "../lore-proto", version = "*" }
