[package]
name = "laurel-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
uuid.workspace = true
hecs.workspace = true
tokio.workspace = true
log.workspace = true
simplelog.workspace = true
# nom.workspace = true
# thiserror.workspace = true

# Serverside RNG
# rand_pcg = "0.9.0"

[dependencies.laurel-common]
version = "0.1.0"
path = "../laurel-common"
features = ["tokio"]